changes in coloring Flamingo is no longer dark's secondary color, it's for errors Now blue and indigo is "cornflower" making it the main color for both color schemes

--- a/blog/templates/blog/clone_post.html
+++ b/blog/templates/blog/clone_post.html
@@ -37,16 +37,16 @@
         {{ form.featured_title|add_class:"form-control"|attr:"placeholder:Post featured title" }}
       </div>
       {% if form.title.help_text %}
-        <span class="text-small text-white-50">{{ form.title.help_text }}</span>
+        <span class="text-sm">{{ form.title.help_text }}</span>
       {% endif %}
       {% if form.featured_title.help_text %}
-        <span class="text-small text-white-50">{{ form.featured_title.help_text }}</span>
+        <span class="text-sm">{{ form.featured_title.help_text }}</span>
       {% endif %}
       {% for error in form.title.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.featured_title.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -56,10 +56,10 @@
         {{ form.categories|add_class:"form-select"|attr:"multiple" }}
       </div>
       {% if form.categories.help_text %}
-        <span class="text-small text-white-50">{{ form.categories.help_text }}</span>
+        <span class="text-sm">{{ form.categories.help_text }}</span>
       {% endif %}
       {% for error in form.categories.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -67,10 +67,10 @@
       {{ form.tags.label_tag }}
       {{ form.tags }}
       {% if form.tags.help_text %}
-        <span class="text-small text-white-50">{{ form.tags.help_text }}</span>
+        <span class="text-sm">{{ form.tags.help_text }}</span>
       {% endif %}
       {% for error in form.tags.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -83,10 +83,10 @@
         {{ form.order_in_series|add_class:"form-control col-auto"|attr:"placeholder:Post order in series" }}
       </div>
       {% if form.series.help_text %}
-        <span class="text-small text-white-50">{{ form.series.help_text }}</span>
+        <span class="text-sm">{{ form.series.help_text }}</span>
       {% endif %}
       {% for error in form.series.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -96,10 +96,10 @@
         {{ form.description.label_tag }}
       </div>
       {% if form.description.help_text %}
-        <span class="text-small text-white-50">{{ form.description.help_text }}</span>
+        <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -108,10 +108,10 @@
         {{ form.body|add_class:"form-control"|attr:"placeholder:Post body" }}
       </div>
       {% if form.body.help_text %}
-        <span class="text-small text-white-50">{{ form.body.help_text }}</span>
+        <span class="text-sm">{{ form.body.help_text }}</span>
       {% endif %}
       {% for error in form.body.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -121,10 +121,10 @@
       {{ form.image.label_tag }}
       {{ form.image|add_class:"form-control"|attr:"placeholder:Post image" }}
       {% if form.image.help_text %}
-        <span class="text-small text-white-50">{{ form.image.help_text }}</span>
+        <span class="text-sm">{{ form.image.help_text }}</span>
       {% endif %}
       {% for error in form.image.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -134,10 +134,10 @@
         {{ form.withdrawn|add_class:"form-check-input" }}
       </div>
       {% if form.withdrawn.help_text %}
-        <span class="text-small text-white-50">{{ form.withdrawn.help_text }}</span>
+        <span class="text-sm">{{ form.withdrawn.help_text }}</span>
       {% endif %}
       {% for error in form.withdrawn.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -147,10 +147,10 @@
         {{ form.is_outdated|add_class:"form-check-input" }}
       </div>
       {% if form.is_outdated.help_text %}
-        <span class="text-small text-white-50">{{ form.is_outdated.help_text }}</span>
+        <span class="text-sm">{{ form.is_outdated.help_text }}</span>
       {% endif %}
       {% for error in form.is_outdated.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -160,10 +160,10 @@
         {{ form.featuring_state.label_tag }}
       </div>
       {% if form.featuring_state.help_text %}
-        <span class="text-small text-white-50">{{ form.featuring_state.help_text }}</span>
+        <span class="text-sm">{{ form.featuring_state.help_text }}</span>
       {% endif %}
       {% for error in form.featuring_state.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -173,10 +173,10 @@
         {{ form.publication_state.label_tag }}
       </div>
       {% if form.publication_state.help_text %}
-        <span class="text-small text-white-50">{{ form.publication_state.help_text }}</span>
+        <span class="text-sm">{{ form.publication_state.help_text }}</span>
       {% endif %}
       {% for error in form.publication_state.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -184,10 +184,10 @@
       {{ form.pub_date.label_tag }}
       {{ form.pub_date|add_class:"form-control picker" }}
       {% if form.pub_date.help_text %}
-        <span class="text-small text-white-50">{{ form.pub_date.help_text }}</span>
+        <span class="text-sm">{{ form.pub_date.help_text }}</span>
       {% endif %}
       {% for error in form.pub_date.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -198,16 +198,16 @@
         {{ form.url_to_article_title|add_class:"form-control"|attr:"placeholder:Linked article's title" }}
       </div>
       {% if form.url_to_article.help_text %}
-        <span class="text-small text-white-50">{{ form.url_to_article.help_text }}</span>
+        <span class="text-sm">{{ form.url_to_article.help_text }}</span>
       {% endif %}
       {% if form.url_to_article_title.help_text %}
-        <span class="text-small text-white-50">{{ form.url_to_article_title.help_text }}</span>
+        <span class="text-sm">{{ form.url_to_article_title.help_text }}</span>
       {% endif %}
       {% for error in form.url_to_article.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.url_to_article_title.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -217,14 +217,14 @@
         {{ form.language.label_tag }}
       </div>
       {% if form.language.help_text %}
-        <span class="text-small text-white-50">{{ form.language.help_text }}</span>
+        <span class="text-sm">{{ form.language.help_text }}</span>
       {% endif %}
       {% for error in form.language.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
   </form>
   {{ form.media }}
 
