--- a/khoBlog/templates/tailwind/facts_flyout.html
+++ b/khoBlog/templates/tailwind/facts_flyout.html
@@ -34,7 +34,7 @@
                   </div>
                 </div>
                 {% if o_fact.link %}
-                  <p class="mt-2 text-sm font-medium text-indigo-600 dark:text-flamingo-300 lg:mt-4">Learn more
+                  <p class="mt-2 text-sm font-medium text-cornflower-600 dark:text-cornflower-300 lg:mt-4">Learn more
                     <span aria-hidden="true">→</span>
                   </p>
                 {% endif %}
