--- a/portfolio/templates/portfolio/edit_sub_project.html
+++ b/portfolio/templates/portfolio/edit_sub_project.html
@@ -25,10 +25,10 @@
         {{ form.title|add_class:"form-control w-50"|attr:"placeholder:Project's title" }}
       </div>
       {% if form.title.help_text %}
-        <span class="text-small text-white-50">{{ form.title.help_text }}</span>
+        <span class="text-sm">{{ form.title.help_text }}</span>
       {% endif %}
       {% for error in form.title.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -38,10 +38,10 @@
         {{ form.snippet.label_tag }}
       </div>
       {% if form.snippet.help_text %}
-        <span class="text-small text-white-50">{{ form.snippet.help_text }}</span>
+        <span class="text-sm">{{ form.snippet.help_text }}</span>
       {% endif %}
       {% for error in form.snippet.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -51,10 +51,10 @@
         {{ form.description.label_tag }}
       </div>
       {% if form.description.help_text %}
-        <span class="text-small text-white-50">{{ form.description.help_text }}</span>
+        <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -64,10 +64,10 @@
         {{ form.learned.label_tag }}
       </div>
       {% if form.learned.help_text %}
-        <span class="text-small text-white-50">{{ form.learned.help_text }}</span>
+        <span class="text-sm">{{ form.learned.help_text }}</span>
       {% endif %}
       {% for error in form.learned.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -79,10 +79,10 @@
         {{ form.link_in_repo|add_class:"form-control"|attr:"placeholder:Link in repo" }}
       </div>
       {% if form.link_in_repo.help_text %}
-        <span class="text-small text-white-50">{{ form.link_in_repo.help_text }}</span>
+        <span class="text-sm">{{ form.link_in_repo.help_text }}</span>
       {% endif %}
       {% for error in form.link_in_repo.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -92,10 +92,10 @@
         {{ form.featured|add_class:"form-check-input" }}
       </div>
       {% if form.featured.help_text %}
-        <span class="text-small text-white-50">{{ form.featured.help_text }}</span>
+        <span class="text-sm">{{ form.featured.help_text }}</span>
       {% endif %}
       {% for error in form.featured.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -104,13 +104,13 @@
         {{ form.slug|add_class:"form-control"|attr:"placeholder:Slug" }}
       </div>
       {% if form.slug.help_text %}
-        <span class="text-small text-white-50">{{ form.slug.help_text }}</span>
+        <span class="text-sm">{{ form.slug.help_text }}</span>
       {% endif %}
       {% for error in form.slug.errors %}
-        <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
   </form>
 {% endblock content %}
