--- a/todo/templates/todo/list.html
+++ b/todo/templates/todo/list.html
@@ -9,7 +9,7 @@
       </div>
       {% if user.is_superuser %}
         <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
-          <a href="{% url 'todo:create_task' %}" type="button" role="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-indigo-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 dark:focus:ring-flamingo-500 focus:ring-offset-2 sm:w-auto">Add new task</a>
+          <a href="{% url 'todo:create_task' %}" type="button" role="button" class="inline-flex items-center justify-center rounded-md border border-transparent bg-cornflower-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-cornflower-500 dark:focus:ring-cornflower-500 focus:ring-offset-2 sm:w-auto">Add new task</a>
         </div>
       {% endif %}
     </div>
@@ -43,8 +43,8 @@
                         {% if not task.complete %}
                         <a class="text-cyan-500 hover:text-cyan-600 dark:text-cyan-400 dark:hover:text-cyan-600" href="{% url 'todo:complete_task' task.id %}">Complete</a>
                         {% endif %}
-                        <a class="text-indigo-600 hover:text-indigo-900 dark:text-indigo-200 dark:hover:text-indigo-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
-                        <a class="text-flamingo hover:text-flamingo-700 dark:text-flamingo-200 dark:hover:text-flamingo-500" href="{% url 'todo:delete' task.id %}">Delete</a>
+                        <a class="text-cornflower-600 hover:text-cornflower-900 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:edit_task' task.id %}">Edit</a>
+                        <a class="text-cornflower hover:text-cornflower-700 dark:text-cornflower-200 dark:hover:text-cornflower-500" href="{% url 'todo:delete' task.id %}">Delete</a>
                       </td>
                     {% endif %}
                   </tr>
