--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -26,7 +26,7 @@
       {% endfor %}
     </div>
 
-    <div class="text-red-600 dark:text-flamingo-400">
+    <div class="text-red-600 dark:text-flamingo-600">
       {{ form.non_field_errors }}
     </div>
 
@@ -37,10 +37,10 @@
         {{ form.featured_title|add_class:"form-control col"|attr:"placeholder:Post featured title" }}
       </div>
       {% for error in form.title.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.featured_title.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -50,10 +50,10 @@
         {{ form.categories|add_class:"form-select"|attr:"multiple" }}
       </div>
       {% if form.categories.help_text %}
-        <span class="text-small text-white-50">{{ form.categories.help_text }}</span>
+        <span class="text-sm">{{ form.categories.help_text }}</span>
       {% endif %}
       {% for error in form.categories.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -61,10 +61,10 @@
       {{ form.tags.label_tag }}
       {{ form.tags }}
       {% if form.tags.help_text %}
-        <span class="text-small text-white-50">{{ form.tags.help_text }}</span>
+        <span class="text-sm">{{ form.tags.help_text }}</span>
       {% endif %}
       {% for error in form.tags.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -77,10 +77,10 @@
         {{ form.order_in_series|add_class:"form-control col-auto"|attr:"placeholder:Post order in series" }}
       </div>
       {% if form.series.help_text %}
-        <span class="text-small text-white-50">{{ form.series.help_text }}</span>
+        <span class="text-sm">{{ form.series.help_text }}</span>
       {% endif %}
       {% for error in form.series.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -90,10 +90,10 @@
         {{ form.description|add_class:"form-control"|attr:"placeholder:Post description" }}
       </div>
       {% if form.description.help_text %}
-        <span class="text-small text-white-50">{{ form.description.help_text }}</span>
+        <span class="text-sm">{{ form.description.help_text }}</span>
       {% endif %}
       {% for error in form.description.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -102,10 +102,10 @@
         {{ form.body|add_class:"form-control"|attr:"placeholder:Post body" }}
       </div>
       {% if form.body.help_text %}
-        <span class="text-small text-white-50">{{ form.body.help_text }}</span>
+        <span class="text-sm">{{ form.body.help_text }}</span>
       {% endif %}
       {% for error in form.body.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -115,10 +115,10 @@
       {{ form.image.label_tag }}
       {{ form.image|add_class:"form-control"|attr:"placeholder:Post image" }}
       {% if form.image.help_text %}
-        <span class="text-small text-white-50">{{ form.image.help_text }}</span>
+        <span class="text-sm">{{ form.image.help_text }}</span>
       {% endif %}
       {% for error in form.image.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -128,10 +128,10 @@
         {{ form.slug|add_class:"form-control"|attr:"placeholder:Slug" }}
       </div>
       {% if form.slug.help_text %}
-        <span class="text-small text-white-50">{{ form.slug.help_text }}</span>
+        <span class="text-sm">{{ form.slug.help_text }}</span>
       {% endif %}
       {% for error in form.slug.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -141,10 +141,10 @@
         {{ form.withdrawn|add_class:"form-check-input" }}
       </div>
       {% if form.withdrawn.help_text %}
-        <span class="text-small text-white-50">{{ form.withdrawn.help_text }}</span>
+        <span class="text-sm">{{ form.withdrawn.help_text }}</span>
       {% endif %}
       {% for error in form.withdrawn.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -154,10 +154,10 @@
         {{ form.is_outdated|add_class:"form-check-input" }}
       </div>
       {% if form.is_outdated.help_text %}
-        <span class="text-small text-white-50">{{ form.is_outdated.help_text }}</span>
+        <span class="text-sm">{{ form.is_outdated.help_text }}</span>
       {% endif %}
       {% for error in form.is_outdated.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -167,10 +167,10 @@
         {{ form.needs_reviewing|add_class:"form-check-input" }}
       </div>
       {% if form.needs_reviewing.help_text %}
-        <span class="text-small text-white-50">{{ form.needs_reviewing.help_text }}</span>
+        <span class="text-sm">{{ form.needs_reviewing.help_text }}</span>
       {% endif %}
       {% for error in form.needs_reviewing.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -180,10 +180,10 @@
         {{ form.featuring_state|add_class:"form-select"|attr:"placeholder:Post featuring state" }}
       </div>
       {% if form.featuring_state.help_text %}
-        <span class="text-small text-white-50">{{ form.featuring_state.help_text }}</span>
+        <span class="text-sm">{{ form.featuring_state.help_text }}</span>
       {% endif %}
       {% for error in form.featuring_state.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -193,10 +193,10 @@
         {{ form.publication_state|add_class:"form-select"|attr:"placeholder:Post publication state" }}
       </div>
       {% if form.publication_state.help_text %}
-        <span class="text-small text-white-50">{{ form.publication_state.help_text }}</span>
+        <span class="text-sm">{{ form.publication_state.help_text }}</span>
       {% endif %}
       {% for error in form.publication_state.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -204,10 +204,10 @@
       {{ form.pub_date.label_tag }}
       {{ form.pub_date|add_class:"form-control picker" }}
       {% if form.pub_date.help_text %}
-        <span class="text-small text-white-50">{{ form.pub_date.help_text }}</span>
+        <span class="text-sm">{{ form.pub_date.help_text }}</span>
       {% endif %}
       {% for error in form.pub_date.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -218,16 +218,16 @@
         {{ form.url_to_article_title|add_class:"form-control"|attr:"placeholder:Linked article's title" }}
       </div>
       {% if form.url_to_article.help_text %}
-        <span class="text-small text-white-50">{{ form.url_to_article.help_text }}</span>
+        <span class="text-sm">{{ form.url_to_article.help_text }}</span>
       {% endif %}
       {% if form.url_to_article_title.help_text %}
-        <span class="text-small text-white-50">{{ form.url_to_article_title.help_text }}</span>
+        <span class="text-sm">{{ form.url_to_article_title.help_text }}</span>
       {% endif %}
       {% for error in form.url_to_article.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
       {% for error in form.url_to_article_title.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
@@ -237,14 +237,14 @@
         {{ form.language|add_class:"form-select"|attr:"placeholder:Post language" }}
       </div>
       {% if form.language.help_text %}
-        <span class="text-small text-white-50">{{ form.language.help_text }}</span>
+        <span class="text-sm">{{ form.language.help_text }}</span>
       {% endif %}
       {% for error in form.language.errors %}
-        <small class="text-red-600 dark:text-flamingo-400">{{ error }}</small>
+        <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
       {% endfor %}
     </div>
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">{{ title }}</button>
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
   </form>
 
   <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
