--- a/khoBlog/templates/account/email_confirm.html
+++ b/khoBlog/templates/account/email_confirm.html
@@ -14,7 +14,7 @@
 
     <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
       {% csrf_token %}
-      <button class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2" type="submit">{% trans 'Confirm' %}</button>
+      <button class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500 mt-2" type="submit">{% trans 'Confirm' %}</button>
     </form>
 
   {% else %}
