--- a/khoBlog/templates/account/logout.html
+++ b/khoBlog/templates/account/logout.html
@@ -6,11 +6,11 @@
 {% endblock title %}
 
 {% block content %}
-  <form method="POST" class="form">
+  <form method="POST">
     {% csrf_token %}
     <h3>You're About to Log out</h3>
     {{ form.as_p }}
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2">Log out</button>
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-flamingo-600 hover:bg-flamingo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-flamingo-500 mt-2">Log out</button>
   </form>
 {% endblock content %}
