--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -26,7 +26,7 @@
       {{ form.title|add_class:"form-control" }}
     </div>
     {% for error in form.title.errors %}
-      <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+      <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
     {% endfor %}
 
     <div class="field mb-2">
@@ -34,11 +34,11 @@
       {{ form.comment|add_class:"form-control" }}
     </div>
     {% for error in form.comment.errors %}
-      <small class="form-text text-red-600 dark:text-flamingo-600">{{ error }}</small>
+      <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
     {% endfor %}
 
     <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}"/>
-    <input class="inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700 cursor-pointer" type="submit" value="Add comment" id="id_submit"/>
+    <input class="inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 cursor-pointer" type="submit" value="Add comment" id="id_submit"/>
   </form>
 {% else %}
   <p>Please
