--- a/khoBlog/templates/django_comments_xtd/comment.html
+++ b/khoBlog/templates/django_comments_xtd/comment.html
@@ -13,12 +13,12 @@
         {% elif comment.alias_user or comment.user and comment.alias_user %}
           {% if user.is_superuser %}
             <a href="{{ comment.user.get_absolute_url }}">{{ comment.user }}</a>
-            <span class="text-small text-white-50">{{ comment.alias_user }}</span>
+            <span class="text-sm">{{ comment.alias_user }}</span>
           {% else %}
             {% if not comment.is_removed %}
               {{ comment.alias_user }}
             {% else %}
-              <span class="text-white-50">This comment has been removed.</span>
+              <span>This comment has been removed.</span>
             {% endif %}
           {% endif %}
         {% else %}
@@ -31,15 +31,15 @@
           {% endif %}
         {% endif %}
 
-        {% if comment.user and comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="badge bg-secondary p-1">Moderator</span>{% endif %}
+        {% if comment.user and comment.user|has_permission:"django_comments.can_moderate" %}&nbsp;<span class="bg-secondary p-1">Moderator</span>{% endif %}
       </h4>
       {% if comment.is_removed %}
         {% if not user.is_superuser %}
-          <p class="text-white-50">
+          <p>
             <em>This comment has been removed.</em>
           </p>
         {% else %}
-          <div class="content text-white-50">
+          <div class="content">
             <em>
               {% if comment.title %}
                 <h4>{{ comment.title }}</h4>
