--- a/khoBlog/templates/django_comments_xtd/like.html
+++ b/khoBlog/templates/django_comments_xtd/like.html
@@ -39,7 +39,7 @@
             {% if already_liked_it %}
               <input type="submit" name="submit" class="btn btn-warning" value="Withdraw"/>
             {% else %}
-              <input type="submit" name="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" value="I like it"/>
+              <input type="submit" name="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500" value="I like it"/>
             {% endif %}
 
             <a class="btn btn-secondary" href="{{ comment.get_absolute_url }}">Cancel</a>
