--- a/khoBlog/templates/includes/django_comments_xtd/user_feedback.html
+++ b/khoBlog/templates/includes/django_comments_xtd/user_feedback.html
@@ -1,17 +1,17 @@
 {% if allow_feedback %}
   <span class="small">
     {% if show_feedback and item.likedit_users %}
-      <a class="badge badge-primary text-white cfb-counter" data-toggle="tooltip" title="{{ item.likedit_users|join:'<br/>' }}">
+      <a data-toggle="tooltip" title="{{ item.likedit_users|join:'<br/>' }}">
         {{ item.likedit_users|length }}</a>
     {% endif %}
 
     <a href="{% url 'comments-xtd-like' item.comment.pk %}" class="{% if not item.likedit %}mutedlink{% endif %}">
       <i class="bi bi-hand-thumbs-up"></i>
     </a>
-    <span class="text-white-50">|</span>
+    <span>|</span>
 
     {% if show_feedback and item.dislikedit_users %}
-      <a class="badge badge-primary text-white cfb-counter" data-toggle="tooltip" title="{{ item.dislikedit_users|join:'<br/>' }}">
+      <a data-toggle="tooltip" title="{{ item.dislikedit_users|join:'<br/>' }}">
         {{ item.dislikedit_users|length }}</a>
     {% endif %}
 
