--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -5,13 +5,13 @@
     <section>
       {% if object.get_featured_cat %}
         <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="inline-block">
-          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800 dark:bg-flamingo-100 dark:text-flamingo-700 hover:bg-indigo-200 dark:hover:bg-flamingo-200">
+          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200">
             {{ object.featured_cat_title }}
           </span>
         </a>
       {% else %}
         <a href="{{ object.categories.first.get_absolute_url }}" class="inline-block">
-          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-indigo-100 text-indigo-800 dark:bg-flamingo-100 dark:text-flamingo-700 hover:bg-indigo-200 dark:hover:bg-flamingo-200">
+          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200">
             {{ object.categories.first }}
           </span>
         </a>
@@ -69,7 +69,7 @@
     </p>
   </section>
   <section class="mt-3">
-    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-indigo-600 hover:text-indigo-500 dark:text-flamingo-200 dark:hover:text-flamingo-400">
+    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:text-cornflower-500 dark:text-cornflower-200 dark:hover:text-cornflower-400">
       Read more about this {{ context.content_type }}
     </a>
   </section>
