--- a/khoBlog/templates/tailwind/display_fact.html
+++ b/khoBlog/templates/tailwind/display_fact.html
@@ -13,7 +13,7 @@
       <div class="ml-4 md:flex-1 md:flex md:flex-col md:justify-between lg:ml-0">
         <div>
           <p class="font-medium">
-            <span class="text-indigo-600 dark:text-flamingo-600">
+            <span class="text-cornflower-600 dark:text-cornflower-600">
               {% if object.showing_rule == 'D' %}
                 Today:
               {% elif object.showing_rule == 'T' %}
@@ -31,7 +31,7 @@
           </div>
         </div>
         {% if object.link %}
-          <p class="mt-2 text-sm font-medium text-indigo-600 dark:text-flamingo-300 lg:mt-4">Learn more
+          <p class="mt-2 text-sm font-medium text-cornflower-600 dark:text-cornflower-300 lg:mt-4">Learn more
           <span aria-hidden="true">→</span>
           </p>
         {% endif %}
