--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -16,6 +16,6 @@
       <input type="radio" name="choice" id="choice{{ forloop.counter }}" value="{{ choice.id }}">
       <label for="choice{{ forloop.counter }}">{{ choice.title }}</label><br>
     {% endfor %}
-    <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2" type="submit" value="Vote">
+    <input class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500 mt-2" type="submit" value="Vote">
   </form>
 {% endblock content %}
