--- a/portfolio/templates/portfolio/sub_project_confirm_delete.html
+++ b/portfolio/templates/portfolio/sub_project_confirm_delete.html
@@ -4,11 +4,11 @@
 {% block content %}
   <h3>Delete:
     {{ subproject.title }}</h3>
-  <form method="POST" class="form">
+  <form method="POST">
     {% csrf_token %}
     <h4>Are you sure ?</h4>
     {{ form.as_p }}
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2">{{ title }}</button>
+    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-flamingo-600 hover:bg-flamingo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-flamingo-500 mt-2">{{ title }}</button>
   </form>
 {% endblock content %}
