--- a/todo/templates/todo/complete_task.html
+++ b/todo/templates/todo/complete_task.html
@@ -6,10 +6,10 @@
     {{ task.id }}
     -
     {{ task.title }}</h3>
-  <form method="POST" enctype="multipart/form-data" class="form">
+  <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% form form %}
 
-      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 mt-2">{{ title }}</button>
+      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500 mt-2">{{ title }}</button>
     </form>
   {% endblock content %}
