--- a/todo/templates/todo/create_task.html
+++ b/todo/templates/todo/create_task.html
@@ -16,14 +16,14 @@
             <label for="id_title" class="block text-sm font-medium text-gray-700 dark:text-jumbo-400 sm:mt-px sm:pt-2">{{ form.title.label }}</label>
             <div class="mt-1 sm:mt-0 sm:col-span-2">
               <div class="max-w-lg flex rounded-md shadow-sm">
-                <input type="text" name="title" id="title" autocomplete="title" class="flex-1 block w-full focus:ring-indigo-500 focus:border-indigo-500 min-w-0 rounded-md sm:text-sm border-gray-300">
+                <input type="text" name="title" id="title" autocomplete="title" class="flex-1 block w-full focus:ring-cornflower-500 focus:border-cornflower-400 min-w-0 rounded-md sm:text-sm border-gray-300">
               </div>
             </div>
           </div>
           <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
             <label for="description" class="block text-sm font-medium text-gray-700 dark:text-jumbo-400 sm:mt-px sm:pt-2">{{ form.description.label }}</label>
             <div class="mt-1 sm:mt-0 sm:col-span-2">
-              <textarea id="description" name="description" rows="3" class="max-w-lg shadow-sm block w-full focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm border border-gray-300 rounded-md"></textarea>
+              <textarea id="description" name="description" rows="3" class="max-w-lg shadow-sm block w-full focus:ring-cornflower-500 focus:border-cornflower-400 sm:text-sm border border-gray-300 rounded-md"></textarea>
             </div>
           </div>
           <div class="sm:grid sm:grid-cols-3 sm:gap-4 sm:items-start sm:border-t sm:border-gray-200 sm:pt-5">
@@ -34,7 +34,7 @@
               <div class="max-w-lg space-y-4">
                 <div class="relative flex items-start">
                   <div class="flex items-center h-5">
-                    {{ form.withdrawn|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
+                    {{ form.withdrawn|add_class:"h-4 w-4 text-cornflower-600 focus:ring-cornflower-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
                   </div>
                   <div class="ml-3 text-sm">
                     <label for="id_withdrawn" class="font-medium text-gray-700 dark:text-jumbo-400">{{ form.withdrawn.label }}</label>
@@ -42,7 +42,7 @@
                 </div>
                 <div class="relative flex items-start">
                   <div class="flex items-center h-5">
-                    {{ form.complete|add_class:"h-4 w-4 text-indigo-600 focus:ring-indigo-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
+                    {{ form.complete|add_class:"h-4 w-4 text-cornflower-600 focus:ring-cornflower-500 border border-gray-300 dark:border-jumbo-300 rounded" }}
                   </div>
                   <div class="ml-3 text-sm">
                     <label for="id_complete" class="font-medium text-gray-700 dark:text-jumbo-400">{{ form.complete.label }}</label>
@@ -56,8 +56,8 @@
     </div>
     <div class="pt-5">
       <div class="flex justify-end">
-        <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Cancel</button>
-        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">Save</button>
+        <button type="button" class="bg-white py-2 px-4 border border-gray-300 rounded-md shadow-sm text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">Cancel</button>
+        <button type="submit" class="ml-3 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">Save</button>
       </div>
     </div>
   </form>
